fix z-index del navbar

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -190,6 +190,12 @@ footer {
 	height: 360px;
 }
 
+.card-img-actions {
+	span {
+		filter: invert(50%);
+	}
+}
+
 @media (max-width: 1500px) {
 	.login {
 		left: 85%;
@@ -199,7 +205,7 @@ footer {
 @media (max-width: 990px) {
 	header {
 		position: sticky;
-		z-index: 1;
+		z-index: 2;
 		top: 0px;
 	}
 
